fix: adjust hand visibility in es-ingredients on small to large devices

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -268,7 +268,7 @@ $media-breakpoint-research: 775px;
     &__container {
       background-size: 250px;
       background-repeat: no-repeat;
-      background-position: bottom left;
+      background-position: bottom center;
       padding-bottom: 390px;
     }
     &__list {
@@ -302,11 +302,18 @@ $media-breakpoint-research: 775px;
       &--img {
         img {
           max-width: 80px;
+          aspect-ratio: 1/1;
           transition: all 0.3s ease-in-out;
           &:hover {
             transform: scale(1.1);
           }
         }
+      }
+    }
+    @media (min-width: $media-breakpoint-sm) and (max-width: $media-breakpoint-lg) {
+      &__container {
+        background-size: 0%;
+        padding-bottom: 50px;
       }
     }
     @media (min-width: $media-breakpoint-lg) {
